registrar reserva y visualizarla